--- a/CSS/style.css
+++ b/CSS/style.css
@@ -28,5 +28,24 @@ ul {
     width: 130px;
 }
 .header.social-icons img{
-    width 20px;
+    width 15px;
+}
+
+.header .right-side {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+/* .header .right-side ul {
+  display: inline-flex;
+} */
+
+.header .right-side ul a {
+  color: white;
+  text-decoration: none;
+}
+
+.header .right-side ul li {
+  margin-right: 20px;
 }
