--- a/CSS/style.css
+++ b/CSS/style.css
@@ -46,6 +46,17 @@ ul {
   text-decoration: none;
 }
 
-.header .right-side ul li {
-  margin-right: 20px;
+
+.btn-primary {
+  background-color: #3f4460;
+  color: white;
+  border: none;
+  padding: 10px 30px;
+  border-radius: 5px;
+}
+
+.btn-primary:hover {
+  cursor: pointer;
+  background-color: #fd7776;
+  transition: ease-in-out 0.2s;
 }
