--- a/CSS/style.css
+++ b/CSS/style.css
@@ -14,6 +14,7 @@ ul {
 }
 
 .header {
+    padding: 10px 0px;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -21,42 +22,51 @@ ul {
 
 .header .left-side {
     display: flex;
+    justify-content: space-between;
     align-items: center;
 }
 
 .header .left-side img {
     width: 130px;
 }
-.header.social-icons img{
-    width 15px;
+
+.header .social-icons {
+    margin-left: 10px;
+}
+
+.header .social-icons img {
+    width: 15px;
 }
 
 .header .right-side {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
 
-/* .header .right-side ul {
-  display: inline-flex;
-} */
+.header .right-side ul {
+    display: inline-flex;
+}
 
 .header .right-side ul a {
-  color: white;
-  text-decoration: none;
+    color: white;
+    text-decoration: none;
 }
 
+.header .right-side ul li {
+    margin-right: 20px;
+}
 
 .btn-primary {
-  background-color: #3f4460;
-  color: white;
-  border: none;
-  padding: 10px 30px;
-  border-radius: 5px;
+    background-color: #3f4460;
+    color: white;
+    border: none;
+    padding: 10px 30px;
+    border-radius: 5px;
 }
 
 .btn-primary:hover {
-  cursor: pointer;
-  background-color: #fd7776;
-  transition: ease-in-out 0.2s;
+    cursor: pointer;
+    background-color: #fd7776;
+    transition: ease-in-out 0.2s;
 }
