--- a/CSS/style.css
+++ b/CSS/style.css
@@ -70,3 +70,19 @@ ul {
     background-color: #fd7776;
     transition: ease-in-out 0.2s;
 }
+/* Hero section styling */
+.hero-content {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.hero-content-button {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.hero-content-button button, p {
+    margin-right: 20px;
+}
